--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Nighthawk Pages 
 description: "Class of 2025"
-owner_name: John Mortensen
-github_username: nighthawkcoders
+owner_name: Arhaan Memon
+github_username: arhaanm123
 github_repo: "Arhaan_2025" 
 baseurl: "/Arhaan_2025"
 future: true
