added popcorn and homework

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ plugins:
   - jekyll-remote-theme
 minima:
   nav_pages:
-  - navgation/blog.md
+  - navigation/blog.md
   - navigation/search.md
   - navigation/corrections.md
   - navigation/about.md
