--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@ minima:
 # remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-remote-theme
-minima:
-  nav_pages:
+header pages: 
   - navigation/blog.md
   - navigation/search.md
   - navigation/corrections.md
